--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -20,6 +20,16 @@
     justify-content: center;
 }
 
+.time{
+    color: red;
+    font-size: 40px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+
+}
+
 .reset{
     width: 250px;
     height: 100px;
